<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_15"
    tools:context=".ui.fragment.TextToSpeechFragment">

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="start"
        android:hint="@string/enter_text_to_speak"
        android:textColorHint="@color/textColor"
        android:minHeight="140dp"
        android:padding="@dimen/padding_10"
        android:layout_marginBottom="@dimen/margin_16"
        android:textColor="@color/textColor"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_speak"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_volume_up_24"
            android:drawablePadding="5dp"
            android:text="@string/speak"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_reset"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_clear_24"
            android:drawablePadding="5dp"
            android:text="@string/clear"
            android:textSize="12sp" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/text_to_speech_animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_scale="0.618"
        android:layout_marginTop="@dimen/margin_32"
        app:lottie_rawRes="@raw/text_to_speech"/>

</LinearLayout>