<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_translator"
        android:icon="@drawable/ic_baseline_translate_24"
        android:title="@string/translator" />

    <item
        android:id="@+id/navigation_text_to_speech"
        android:icon="@drawable/ic_baseline_settings_voice_24"
        android:title="@string/text_to_speech" />

    <item
        android:id="@+id/navigation_phrases"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/phrases" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/quiz" />

</menu>